fix(analytics): 💄 layout shift

--- a/src/components/RenderOnViewportEntry/RenderOnViewportEntry.module.css
+++ b/src/components/RenderOnViewportEntry/RenderOnViewportEntry.module.css
@@ -1,7 +1,3 @@
 .RenderOnViewportEntry {
   min-height: 300px;
 }
-
-.RenderOnViewportEntry {
-  margin-bottom: 2em;
-}
