--- a/src/pages/Analytics/Footer/Footer.module.css
+++ b/src/pages/Analytics/Footer/Footer.module.css
@@ -21,7 +21,6 @@
   display: grid;
   padding-block: 2rem;
   grid-template-columns: repeat(1, minmax(0, 1fr));
-  margin-top: 3rem;
 }
 
 .FooterContent {
